--- a/public/css/app.css
+++ b/public/css/app.css
@@ -74,6 +74,7 @@ body{
     justify-content: space-between;
     position: fixed;
     background-color: white;
+    z-index: 2;
     opacity: 97%;
     backdrop-filter: blur(20px);
     left: 0;
@@ -82,6 +83,7 @@ body{
     padding-right: 80px;
     height: 72px;
     align-items: center;
+
 }
 
 .nav-links{
@@ -91,10 +93,17 @@ body{
 }
 .nav-links a{
     font-size: 16px;
-    font-weight: 800;
+    font-weight: 400;
     line-height: 24px;
-    font-family: monospace;
+    font-family: 'Poppins', sans-serif;
     text-decoration: none;
+}
+
+.nav-links a:hover{
+    text-decoration: underline;
+    text-underline-offset: 5px;
+    text-decoration-thickness: 2px;
+    text-decoration-color:#FF5480 ;
 }
 
 .login-btn{
@@ -206,40 +215,113 @@ body{
 }
 
 .middle-section{
-    padding-top: 30px;
+    padding-top: 100px;
+    position: relative;
+    bottom: 30px;
+    z-index: 20px;
     height: 700px;
-    /* background-color: #ebebed; */
-    /* background-image: url('https://images.unsplash.com/photo-1531482615713-2afd69097998?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
-    background-size: cover; */
     background-color: white;
-    opacity: 70%;
+    border-top-left-radius: 40px;
+    border-top-right-radius: 40px;
 
 }
 
 .middle-section .header{
     font-size: 62px;
     font-weight: bolder;
+    letter-spacing: 5px;
+    line-height: 70px;
     color: #FF5480;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin: auto;
     width: 750px;
     text-align: center;
+    font-family: 'Koulen', cursive;
 }
 
-.stat-container{
-    margin-left: 55px;
-    margin-right: 55px;
+.stat-main-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+    margin-top: 100px;
+    
 }
 
-.stat-card{
+.stat-main-container img{
+    width: 500px;
+    height: 500px;
+    background-position: center;
+    object-fit: cover;
+    border: 4px solid #FF5480;
+    border-radius: 50%;
+}
+
+
+.stat-container-left .stat-card{
     width: 350px;
-    height: 100px;
+    height: 120px;
     background-color: white;
     border-left: 8px solid #FF5480;
     border-bottom: 3px solid #FF5480;
     display: flex;
     align-items: center;
+    margin-bottom: 24px;
     padding-left: 24px;
     box-shadow: 0.5px 0.5px 1px 1px ;
+}
 
+.stat-card h1{
+    width: 350px;
+    height: 100px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-family: 'Poppins', sans-serif;
+    font-size: 24px;
+    white-space: pre-wrap;
+}
+
+.stat-container-right .stat-card{
+    width: 350px;
+    height: 120px;
+    background-color: white;
+    border-right: 8px solid #FF5480;
+    border-bottom: 3px solid #FF5480;
+    display: flex;
+    align-items: center;
+    margin-bottom: 24px;
+    padding-left: 24px;
+    box-shadow: 0.5px 0.5px 1px 1px ;
+}
+
+.mission{
+    margin-top: 200px;
+    height: 800px;
+    background-color: #FF5480;
+    border-top-left-radius: 40px;
+    border-top-right-radius: 40px;
+}
+
+.mission .header{
+    font-size: 62px;
+    font-weight: bolder;
+    letter-spacing: 5px;
+    padding-top: 100px;
+    line-height: 70px;
+    color: white;
+    margin: auto;
+    width: 750px;
+    text-align: center;
+    font-family: 'Koulen', cursive;
+}
+
+.mission p{
+    color: white;
+    font-family: 'Poppins', sans-serif;
+    font-size: 28px;
+    padding-top: 50px;
+    margin: auto;
+    text-align: center;
+    width: 1400px;
 }
