--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10,6 +10,13 @@ body{
     gap: 24px;
     margin-top: 50px;
 }
+
+.container{
+    overflow: hidden;
+}
+.content-wrapper{
+    margin-top: 200px;
+}
 .flex-container h1{
     font-size: 52px;
     color: blue;
@@ -79,10 +86,12 @@ body{
     backdrop-filter: blur(20px);
     left: 0;
     right: 0;
+    top: 0;
     padding-left: 80px;
     padding-right: 80px;
     height: 72px;
     align-items: center;
+    box-shadow: 1px 1px 1px #FF5480;
 
 }
 
@@ -99,7 +108,7 @@ body{
     text-decoration: none;
 }
 
-.nav-links a:hover{
+.nav-links .link:hover{
     text-decoration: underline;
     text-underline-offset: 5px;
     text-decoration-thickness: 2px;
@@ -116,6 +125,14 @@ body{
     width: 106px;
     height: 40px;
     border-radius: 5px;
+    transition: all;
+    transition-duration: 600ms;
+}
+
+.login-btn:hover{
+    background-color: transparent;
+    color: #FF5480;
+    border: 1px solid #FF5480;
 }
 
 .reg-btn{
@@ -129,6 +146,13 @@ body{
     width: 106px;
     height: 40px;
     border-radius: 5px;
+    transition: all;
+    transition-duration: 600ms;
+}
+
+.reg-btn:hover{
+    background-color: #FF5480;
+    color: white;
 }
 
 .hero-section{
@@ -192,6 +216,7 @@ body{
     font-size: 24px;
     font-weight: 800;
     border-radius: 5px;
+    cursor: pointer;
 }
 
 .enroll-container{
@@ -218,6 +243,7 @@ body{
     padding-top: 100px;
     position: relative;
     bottom: 30px;
+    margin-bottom:600px ;
     z-index: 20px;
     height: 700px;
     background-color: white;
@@ -297,8 +323,11 @@ body{
 
 .mission{
     margin-top: 200px;
-    height: 800px;
-    background-color: #FF5480;
+    position: absolute;
+    width: 100%;
+    top: 1600px;
+    height: 500px;
+    background-color: #f593d3;
     border-top-left-radius: 40px;
     border-top-right-radius: 40px;
 }
@@ -324,4 +353,289 @@ body{
     margin: auto;
     text-align: center;
     width: 1400px;
+}
+
+.form-container{
+    margin:150px auto;
+    width: 350px;
+    height: auto;
+    /* background-color: white; */
+}
+
+.form-wrapper{
+    width: 800px;
+    height: 600px;  
+    background-color: #f5f7fa;
+    margin: auto;
+    border-radius: 20px;
+}
+.form-container h1{
+    text-align: center;
+    color: #FF5480;
+    font-family: 'Poppins',cursive;
+    font-size: 32px;
+    font-weight: bold;
+    padding-top: 80px;
+}
+.input-container{
+    display: flex;
+    flex-direction: column;
+}
+
+.input-container label{
+    padding-left: 20px;
+    padding-bottom: 5px;
+    font-family: 'Poppins',cursive;
+    color: #FF5480;
+}
+
+.input-field{
+    width: 330px;
+    height: 40px;
+    padding-left: 20px;
+    outline: none;
+    border-radius: 50px;
+    border: 1px solid #E1E1E1;
+    margin-bottom: 20px;
+    color: black;
+    font-size: 20px;
+}
+
+.btn-wrapper .btn{
+    width: 350px;
+    height: 40px;
+    border-radius: 30px;
+    border: none;
+    background-color: #FF5480;
+    color: white;
+    font-family: 'Poppins',cursive;
+    font-size: 14px;
+    font-weight: 700;
+    font-style: normal;
+    margin-top: 20px;
+    cursor: pointer;
+}
+
+.btn-wrapper a{
+    text-decoration: none;
+    padding-left: 10px;
+    color: #FF5480;
+}
+
+.btn-wrapper p{
+    font-family: 'Poppins',cursive;
+}
+
+.form-group{
+    display: flex;
+    width: 400px;
+    justify-content: space-between;
+}
+
+.form-group .input-field{
+    width: 170px;
+}
+
+.register-wrapper{
+    background-color: #f5f7fa;
+    border-radius: 20px;
+    width: 600px;
+    padding: 10px;
+    margin:50px auto;
+}
+
+.register-wrapper h1{
+    text-align: center;
+    color: #FF5480;
+    font-family: 'Poppins',cursive;
+    font-size: 32px;
+    font-weight: bold;
+}
+
+.register-wrapper form{
+    width: 400px;
+    margin: 0 auto;
+}
+
+.register-btn input{
+    width: 400px;
+    height: 40px;
+    border-radius: 30px;
+    border: none;
+    background-color: #FF5480;
+    color: white;
+    font-family: 'Poppins',cursive;
+    font-size: 14px;
+    font-weight: 700;
+    font-style: normal;
+    margin-top: 20px;
+    cursor: pointer;
+}
+
+.register-btn a{
+    text-decoration: none;
+    padding-left: 10px;
+    color: #FF5480;
+}
+
+.register-btn p{
+    font-family: 'Poppins',cursive;
+    text-align: center;
+}
+
+.about-hero{
+    margin-top: 70px;
+    height: 600px;
+}
+
+.about-hero h1{
+    text-align: center;
+    color: #FF5480;
+    font-size: 90px;
+    padding-top: 40px;
+    font-family: 'Koulen',cursive;
+}
+
+.meet-team{
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+
+.meet-team h1{
+    text-align: center;
+    color: #FF5480;
+    font-size: 72px;
+    font-family: 'Koulen',cursive;
+}
+
+.meet-team img{
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    border: 6px solid #FF5480;
+}
+
+.team-wrapper{
+    margin-top: 100px;
+    display: flex;
+    justify-content: center;
+    gap: 180px;
+    flex-wrap: wrap;
+}
+
+.member-container h1{
+    font-size: 24px;
+    font-family: 'Poppins',cursive;
+}
+
+.member-container h2{
+    font-size: 20px;
+    text-align: center;
+    color: #717275;
+    font-family: 'Poppins',cursive;
+}
+
+
+footer{
+    display: flex;
+    height: 286px;
+    position: absolute;
+    width: 100%;
+    z-index: 20;
+    justify-content: space-evenly;
+    background-color: #FF5480;
+    border-top-left-radius: 40px;
+    border-top-right-radius: 40px;
+}
+
+.rahisi_sect{
+    width: 424px;
+    height: 132px;
+    color: #FFFFFF;
+
+}
+
+.rahisi{
+    font-family: 'Koulen',cursive;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 42px;
+    line-height: 47px;
+    color: #FFFFFF;
+}
+
+.home_sect{
+    color: #FFFFFF;
+}
+
+.home_sect .home{
+    padding-left: 35px;
+}
+
+.home_sect ul{
+    list-style-type: none;
+}
+
+.home_sect ul li{
+    cursor: pointer;
+    padding-bottom: 15px;
+}
+
+.shop_sect{
+    color: #FFFFFF;
+}
+
+.shop_sect .shop{
+    padding-left: 35px;
+}
+
+.shop_sect ul{
+    list-style-type: none;
+}
+
+.shop_sect ul li{
+    padding-bottom: 15px;
+}
+
+
+.cat_sect{
+    color: #FFFFFF;
+}
+
+.cat_sect .cat{
+    padding-left: 35px;
+}
+
+.cat_sect ul{
+    list-style-type: none;
+}
+
+.cat_sect ul li{
+    cursor: pointer;
+    padding-bottom: 15px;
+
+}
+
+
+.contact_sect{
+    color: #FFFFFF;
+}
+
+.contact_sect .contact{
+    padding-left: 35px;
+}
+
+.contact_sect p{
+    padding-left: 35px;
+}
+
+.contact_sect ul{
+    display: flex;
+    gap: 16px;
+    margin-top: 26px;
+    list-style-type: none;
+}
+
+.contact_sect ul li{
+    cursor: pointer;
 }
